fixed doc for /api/user/{id}/books
