# back/config/packages/nelmio_api_doc.yaml
@@ -61,6 +61,16 @@ nelmio_api_doc:
                             type: array
                             items: 
                                 ref: "#/components/schemas/UserInfos"
+                UserBooks:
+                    type: 'object'
+                    properties:
+                        books:
+                            type: array
+                            items: 
+                                ref: "#/components/schemas/LastBooksInfos"
+                        nbResult:
+                            type: integer
+                            example: 1
                 AddOrRemoveFriend:
                     type: 'object'
                     properties:
